# expense-bot

./: .gitignore  .pylintrc  README.md  lambda.py  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
reqs/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
scripts/: delete_webhook.py  run_bot.py  set_webhook.py  update_lambda.py
src/expense_bot/: __init__.py  bot.py  model.py  repository.py  secrets.py  utils.py  version.py
src/expense_bot/commands/: __init__.py  add.py  common.py  show.py
src/expense_bot/repositories/: __init__.py  google.py
tests/: test_utils.py
