[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "expense-bot"
description = "A personal expense bot"
readme = "README.md"
requires-python = ">=3.9"
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dynamic = ["version"]
dependencies = [
    "aiogram",
    "google-api-python-client",
]

[project.optional-dependencies]
dev = [
    "awslambdaric",
    "black",
    "boto3==1.20.32",
    "botocore==1.23.32",
    "flake8",
    "flake8-pyproject",
    "google-api-python-client-stubs",
    "mypy",
    "pip-tools",
    "pylint",
    "pytest",
    "wheel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "expense_bot.__version__"}

[tool.black]
line-length = 78

[tool.flake8]
ignore = ["E203", "E704"]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 78

[tool.pylint.main]
good-names = ["dt", "dp"]
disable = ["R0801", "R0903"]
