[project]
name = "expense-bot"
description = "A personal expense bot"
readme = "README.md"
requires-python = ">=3.13"
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
    "aiogram",
    "google-api-python-client",
]

[dependency-groups]
dev = [
    "awslambdaric",
    "black",
    "boto3",
    "botocore",
    "flake8",
    "flake8-pyproject",
    "google-api-python-client-stubs",
    "mypy",
    "pylint",
    "pytest",
    "ruff",
]

[tool.black]
line-length = 78

[tool.flake8]
ignore = ["E203", "E226", "E704"]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 78

[tool.pylint.main]
good-names = ["dt", "dp"]
disable = ["R0801", "R0903"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "SIM",
    "I",
    "R",
]

[tool.uv]
link-mode = "copy"
python-downloads = "never"
